# BIOME

./: .gitignore  NorthAm.Shorea.namelist  NorthAm.namelist  README.md  configure.ac
joboptions/: NorthAm.ARC.namelist  NorthAm.Shorea.namelist  NorthAm.local.namelist  Olduvai.namelist  WNA1km.ARC.namelist  global1km.namelist
output/: 1kmradplots.sh  README.md  biome17.cpt  biome17.legend  california_biomes.sh  modelPET.sh  plot_biomes_proj.sh  plotweather2.sh  radcomparison.sh  radial_plot_nc.sh  radiationplots.sh  soildata.sh
share/: La2004.nc  test.nc
src/: Makefile  Makefile.am  airmassmod.f90  biome1.f90  calcbiomemod.f90  calendarmod.f90  coordsmod.f90  diurnaltempmod.f90  errormod.f90  insolationmod.f90  netcdfoutputmod.f90  newsplinemod.f90  orbitmod.f90  overprint.c  parametersmod.f90  pedotransfermod.f90  physicsmod.f90  radiationmod.f90  randomdistmod.f90  readdatamod.f90  scrap_code.f90  snowmod.f90  soilphysicsmod.f90  soilwatermod.f90  statsmod.f90  tsoutputmod.f90  typesmod.f90  utilitymod.f90  weathergenmod.f90
