bin_PROGRAMS = biome1

biome1_SOURCES =       \
  overprint.c          \
  parametersmod.f90    \
  errormod.f90         \
  utilitymod.f90       \
  statsmod.f90         \
  randomdistmod.f90    \
  typesmod.f90         \
  coordsmod.f90        \
  readdatamod.f90      \
  netcdfoutputmod.f90  \
  orbitmod.f90         \
  calendarmod.f90      \
  newsplinemod.f90     \
  weathergenmod.f90    \
  biome1.f90

clean-local:
	rm -r -f *.o *.mod *.dSYM
