bin_PROGRAMS = biome1

biome1_SOURCES =       \
  parametersmod.f90    \
  errormod.f90         \
  utilitymod.f90       \
  statsmod.f90         \
  randomdistmod.f90    \
  typesmod.f90         \
  coordsmod.f90        \
  pedotransfermod.f90  \
  readdatamod.f90      \
  tsoutputmod.f90      \
  netcdfoutputmod.f90  \
  physicsmod.f90       \
  orbitmod.f90         \
  calendarmod.f90      \
  insolationmod.f90    \
  newsplinemod.f90     \
  weathergenmod.f90    \
  diurnaltempmod.f90   \
  airmassmod.f90       \
  radiationmod.f90     \
  soilphysicsmod.f90   \
  soilwatermod.f90     \
  snowmod.f90          \
  calcbiomemod.f90     \
  biome1.f90

clean-local:
	rm -r -f *.o *.mod *.dSYM
